pom-parser/src/snapshots/invalid_paren-6.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"(\")"
---
(
    Ast {
        items: [
            Id<Stmt>(0),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Expr(
                        Id<Expr>(1),
                    ),
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Invalid(
                        Id<Error>(0),
                    ),
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
                Expr {
                    kind: Paren(
                        Id<Expr>(0),
                    ),
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
            ],
        ),
    },
    Arena(
        [
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Bool,
                        Float,
                        Ident,
                        Int,
                        LBrace,
                        LParen,
                    ],
                    got: Token {
                        kind: Eof,
                        span: Span {
                            start: 4294967295,
                            end: 4294967295,
                        },
                    },
                },
                span: Span {
                    start: 0,
                    end: 1,
                },
            },
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        RParen,
                    ],
                    got: Token {
                        kind: Eof,
                        span: Span {
                            start: 4294967295,
                            end: 4294967295,
                        },
                    },
                },
                span: Span {
                    start: 0,
                    end: 1,
                },
            },
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Semicolon,
                    ],
                    got: Token {
                        kind: Eof,
                        span: Span {
                            start: 4294967295,
                            end: 4294967295,
                        },
                    },
                },
                span: Span {
                    start: 0,
                    end: 1,
                },
            },
        ],
    ),
)
