pom-parser/src/snapshots/invalid_tokens.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"55 ^ $ 47\")"
---
(
    Ast {
        items: [
            Id<Stmt>(0),
            Id<Stmt>(1),
            Id<Stmt>(2),
            Id<Stmt>(3),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Expr(
                        Id<Expr>(0),
                    ),
                    span: Span {
                        start: 0,
                        end: 2,
                    },
                },
                Stmt {
                    kind: Expr(
                        Id<Expr>(1),
                    ),
                    span: Span {
                        start: 3,
                        end: 4,
                    },
                },
                Stmt {
                    kind: Expr(
                        Id<Expr>(2),
                    ),
                    span: Span {
                        start: 5,
                        end: 6,
                    },
                },
                Stmt {
                    kind: Expr(
                        Id<Expr>(3),
                    ),
                    span: Span {
                        start: 7,
                        end: 9,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 0,
                        end: 2,
                    },
                },
                Expr {
                    kind: Invalid(
                        Id<Error>(1),
                    ),
                    span: Span {
                        start: 3,
                        end: 4,
                    },
                },
                Expr {
                    kind: Invalid(
                        Id<Error>(2),
                    ),
                    span: Span {
                        start: 5,
                        end: 6,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            47,
                        ),
                    ),
                    span: Span {
                        start: 7,
                        end: 9,
                    },
                },
            ],
        ),
    },
    Arena(
        [
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Semicolon,
                    ],
                    got: Token {
                        kind: Invalid,
                        span: Span {
                            start: 3,
                            end: 4,
                        },
                    },
                },
                span: Span {
                    start: 0,
                    end: 2,
                },
            },
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Bool,
                        Float,
                        Ident,
                        Int,
                        LBrace,
                        LParen,
                    ],
                    got: Token {
                        kind: Invalid,
                        span: Span {
                            start: 3,
                            end: 4,
                        },
                    },
                },
                span: Span {
                    start: 0,
                    end: 2,
                },
            },
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Bool,
                        Float,
                        Ident,
                        Int,
                        LBrace,
                        LParen,
                    ],
                    got: Token {
                        kind: Invalid,
                        span: Span {
                            start: 5,
                            end: 6,
                        },
                    },
                },
                span: Span {
                    start: 3,
                    end: 4,
                },
            },
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Semicolon,
                    ],
                    got: Token {
                        kind: Eof,
                        span: Span {
                            start: 4294967295,
                            end: 4294967295,
                        },
                    },
                },
                span: Span {
                    start: 7,
                    end: 9,
                },
            },
        ],
    ),
)
