pom-parser/src/snapshots/paren-2.snap
---
source: pom-parser/src/tests.rs
expression: "lex_and_parse(\"(10);\")"
---
(
    Ast {
        items: [
            Id<Stmt>(0),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Expr(
                        Id<Expr>(1),
                    ),
                    span: Span {
                        start: 0,
                        end: 5,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Literal(
                        Int(
                            10,
                        ),
                    ),
                    span: Span {
                        start: 1,
                        end: 3,
                    },
                },
                Expr {
                    kind: Paren(
                        Id<Expr>(0),
                    ),
                    span: Span {
                        start: 0,
                        end: 4,
                    },
                },
            ],
        ),
    },
    Arena(
        [],
    ),
)
