pom-parser/src/snapshots/paren.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"(55 + 47);\")"
---
(
    Ast {
        items: [
            Id<Stmt>(1),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Expr(
                        Id<Expr>(4),
                    ),
                    span: Span {
                        start: 0,
                        end: 10,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 1,
                        end: 3,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            47,
                        ),
                    ),
                    span: Span {
                        start: 6,
                        end: 8,
                    },
                },
                Expr {
                    kind: Binary {
                        lhs: Id<Expr>(1),
                        op: Add,
                        rhs: Id<Expr>(2),
                    },
                    span: Span {
                        start: 1,
                        end: 8,
                    },
                },
                Expr {
                    kind: Paren(
                        Id<Expr>(3),
                    ),
                    span: Span {
                        start: 0,
                        end: 9,
                    },
                },
            ],
        ),
    },
    Arena(
        [],
    ),
)
